# BTG-FinStream-Dashboard

./: .dockerignore  .gitignore  README.md  docker-compose.yml
aws/: samconfig.toml  sample-transaction-event.json  template.yaml
aws/events_ingestion/: app.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: events.py  health.py  ops.py
backend/app/core/: config.py  cors.py  db.py
backend/app/models/: __init__.py  transaction_event.py
backend/app/schemas/: operations.py  transaction_event.py
backend/app/services/: dlq_store.py  event_consumer.py  event_processor.py  event_repository.py  event_store.py  health.py  live_metrics.py  ops_metrics.py
backend/app/websocket/: manager.py  routes.py
docs/: architecture.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
infra/: docker-compose.yml
infra/frontend/: nginx.conf
infra/postgres/: init.sql
infra/redpanda/: bootstrap.sh
producer/: Dockerfile  producer.py
